# holbertonschool-unity

./: .gitignore  .gitmodules
0x00-unity-user_interface/: 0x00. Unity - User Interface.md
0x01-unity_concepts/: README.md
0x01-unity_concepts _BKP/: README.md
0x01-unity_concepts _BKP/Assets/: 1-ball.unity  3-gravity.unity
0x01-unity_concepts/Assets/: 0-floor.unity  100-textures.unity  2-colors.unity  4-prefab.unity  5-more_color.unity  6-tags.unity
0x01-unity_concepts_2/Assets/: 0-floor.unity
0x04-unity-publishing/: README.md
0x04-unity-publishing/Assets/: maze.unity  menu.unity
0x04-unity-publishing/ProjectSettings/: ProjectSettings.asset
0x04-unity_publishing/: .gitignore
0x04-unity_publishing/Assets/: maze.unity  menu.unity
0x04-unity_publishing/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
0x05-unity-assets_models_textures/: README.md
0x05-unity-assets_models_textures/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
0x06-unity-assets_ui/: README.md
0x06-unity-assets_ui/ProjectSettings/: InputManager.asset  ProjectSettings.asset  TagManager.asset
0x07-unity-animation/ProjectSettings/: TagManager.asset
0x08-unity-audio/: .gitignore  README.md  main_3.py
0x08-unity-audio/Builds/: README.md
0x08-unity-audio/ProjectSettings/: EditorBuildSettings.asset  FbxExportSettings.asset  InputManager.asset  TagManager.asset
0x09-unity_ar_business_card/: README.md
0x0B-unity-vr_room/: .gitignore  README.md
quickArchive/: Cargo.toml
quickArchive/src/: main.rs
(+444 files in other folders)
